@@ -23,11 +23,13 @@
 #ifdef HAVE_OPENSSL
 #include <openssl/bn.h>
 #include <openssl/rsa.h>
+#include <openssl/rand.h>
 #endif
 
 #ifdef HAVE_SSL
 #include <ssl/bn.h>
 #include <ssl/rsa.h>
+#include <ssl/rand.h>
 #endif
 
 /* Calls SSL RSA_generate_key, only copies to prv and pub */
